--- a/kafkaConsumer/src/main/resources/application.properties
+++ b/kafkaConsumer/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.port=6666
 kafka.bootstrapAddress=localhost:9092
 message.topic.name=NumberTopic
+group.id=demo
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/KafkaDb
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=create
+
